# SaturnClient

./: CMakeLists.txt
src/: dllmain.cpp
src/Hooks/: HookManager.cpp  HookManager.h
src/Hooks/ActorHook/: ActorHook.h
src/Hooks/ClientInstanceHook/: ClientInstanceHook.h
src/Hooks/ConnectionRequestHook/: ConcreHook.h
src/Hooks/DirectXHook/: DirectXHook.cpp  DirectXHook.h
src/Hooks/LoopBackPacketSender/: LoopbackPacketSender.h
src/Hooks/OptionsHook/: OptionsHook.h
src/Hooks/ScreenContextHook/: ScreenContextHook.h
src/Hooks/SystemHook/: SystemHook.h
src/Libraries/: Libraries.h
src/Libraries/ImFX/: ImFX.cpp  ImFX.h
src/Libraries/Kiero/: kiero.cpp
src/Libraries/MinHook/: libMinHook.x64.lib
src/Libraries/imgui/: imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.cpp
src/SDK/: SDK.h
src/SDK/Actor/: Actor.h  LocalPlayer.cpp  LocalPlayer.h  Mob.h  Player.h
src/SDK/Actor/Components/: RotationComponent.h  StateVectorComponent.h
src/SDK/CompoundTag/: CompoundTag.h
src/SDK/Core/: ClientInstance.h  GuiData.h  LoopbackPacketSender.h  Minecraft.h  MinecraftGame.h  ScreenContext.h
src/SDK/DX11/: DirectX11.cpp  DirectX11.h
src/SDK/GameMode/: GameMode.h
src/SDK/Inventory/: Inventory.h  PlayerInventory.h
src/SDK/Item/: Item.h  ItemStack.h  ItemStackBase.h
src/SDK/Packet/: Packet.h  PayloadPacket.h  RequestPermissions.h  TextPacket.h
src/SDK/Packet/Payloads/: RequestPermissionPayload.h  TextPacketPayload.h
src/Utils/: AnimationUtils.h  ClientData.cpp  ClientData.h  MathUtils.h  MemUtils.h  Utils.cpp  Utils.h
src/Utils/Animations/: easeBase.h  easeInBack.h  easeInBounce.h  easeInCirc.h  easeInCubic.h  easeInElastic.h  easeInExpo.h  easeInOutBack.h  easeInOutBounce.h  easeInOutCirc.h  easeInOutCubic.h  easeInOutElastic.h  easeInOutExpo.h  easeInOutQuad.h  easeInOutQuart.h  easeInOutQuint.h  easeInOutSine.h  easeInQuad.h  easeInQuart.h  easeInQuint.h  easeOutBack.h  easeOutBounce.h  easeOutCirc.h  easeOutCubic.h  easeOutElastic.h  easeOutExpo.h  easeOutQuad.h  easeOutQuart.h  easeOutQuint.h  easeOutSine.h
